[LNN] Fix IN route font size on mobile

--- a/assets/lnn/lnn_mobile.css
+++ b/assets/lnn/lnn_mobile.css
@@ -1,6 +1,9 @@
 .full_name {
     display: none;
 }
+.FinalA, .FinalB, .in_route {
+    font-size: 8px;
+}
 #layouttoggle {
     display: none;
 }
